# mbox_viewer

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  OLLAMA_AGENT.md  README.md  coverage.json  docker-compose.yml  email_server.py  email_service.py  email_utils.py  main.py  mcp_server.py  mypy.ini  ollama_agent.py  pyproject.toml  pytest.ini  web_client.html  web_client_template.html
.github/workflows/: tests.yml
static/: iframe_wrapper.js  sim_script.js
templates/: email_detail.jinja  email_detail_thread.jinja  email_list.jinja  index.html  mail_list.jinja  stats.jinja
tests/: conftest.py  test_api.py  test_email_utils.py  test_mcp_server.py
