[project]
name = "mbox-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.2.0",
    "dateparser>=1.2.2",
    "duckdb>=1.4.1",
    "fastapi>=0.119.0",
    "flagembedding>=1.3.5",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "readabilipy>=0.3.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=8.37.0",
    "isort>=7.0.0",
]
