[project]
name = "mbox-viewer"
version = "0.1.0"
description = "A web-based email viewer for MBOX archives with full-text search, threading, and RAG-powered semantic search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.2.0",
    "dateparser>=1.2.2",
    "duckdb>=1.4.1",
    "fastapi>=0.119.0",
    "flagembedding>=1.3.5",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "readabilipy>=0.3.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=8.37.0",
    "isort>=7.0.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "types-requests>=2.0.0",
]

[tool.coverage.run]
omit = [
    "tests/*",
]
